# gradio-splatting

./: README.md  package-lock.json  package.json  pyproject.toml
backend/gradio_model3dgs/: __init__.py  model3dgs.py  model3dgs.pyi
backend/gradio_model3dgs/templates/component/: index.js  style.css
demo/: app.py
flagged/: log.csv
frontend/: package-lock.json  package.json
frontend/shared/: Model3DGS.svelte  Model3DGSUpload.svelte
gradio_cached_examples/12/: log.csv
model3dgs/: README.md  pyproject.toml
model3dgs/backend/gradio_model3dgs/templates/component/: index.js  wrapper-98f94c21-f7f71f53.js
model3dgs/demo/: app.py
model3dgs/frontend/: Index.svelte  package.json
