[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_model3dgs"
version = "0.1.9"
description = "Python library for easily interacting with trained machine learning models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "Dylan Ebert", email = "dylan@huggingface.co" }]
keywords = [
  "machine learning",
  "reproducibility",
  "visualization",
  "gradio",
  "gradio custom component",
  "gradio-template-Model3D"
]
# Add dependencies here
dependencies = ["gradio>=4.0,<5.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gradio_model3dgs/templates", "*.pyi", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates", "backend/gradio_model3dgs/templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_model3dgs"]
